♻️ Backwards-compatibility for SemicolonCheck (reversed Version bump to Java16)